our cakes and logo divs changed

--- a/index.html
+++ b/index.html
@@ -13,42 +13,59 @@
         <div id="grid">
                 <div class="one">
                     <div class="nestedgrid1">
-
-                                <div class="nestedone">
+                                <div class="nested1one">
                                 <h2>OUR CAKES</h2>
                                 </div>
 
-                                <div class="nestedtwo">
+                                <div class="nested1two">
                                 <img src="img/birthdaycakes.jpg">
-                                <h3>Birthday cakes</h3>
+                                <h3><a href="#">Birthday cakes</a></h3>
                                 <h4>40-100 Euro/1kg</h4>
                                 </div>
 
-                                <div class="nestedthree">
+                                <div class="nested1three">
                                 <img src="img/weddingcakes.jpg">
-                                <h3>Wedding cakes</h3>
+                                <h3><a href="#">Wedding cakes</a></h3>
                                 <h4>70-100 Euro/1kg</h4>  
                                 </div>      
                                 
-                                <div class="nestedfour">
+                                <div class="nested1four">
                                 <img src="img/cookies2.jpg">
-                                <h4>Cookies</h4>
-                                <h3>10-50 Euro/1kg</h3>
+                                <h3><a href="#">Cookies</a></h3>
+                                <h4>10-50 Euro/1kg</h4>
                                 </div>
 
-                                <div class="nestedfive">
+                                <div class="nested1five">
                                 <img src="img/donuts2.jpg">
-                                <h4>Donuts and others</h4>
-                                <h3>10-80 Euro/1kg</h3>
+                                <h3><a href="#">Donuts and other</a></h3>
+                                <h4>10-80 Euro/1kg</h4>
                                 </div>
 
+                                <div class="nested1six"> 
+                                <h3><a href="#">Tiered Cake Serving Guide</a></h3>
+                                <h3><a href="#">Birthday Cake Serving Guide</a></h3>
+                                <h3><a href="#">Everyday Cakes</a></h3>
+                                <h3><a href="#">Cupcakes & Desserts</a></h3>
+                                </div>
 
                     </div>
                 </div>
      
+
                 <div class="two">
-                <h5>logo</h5>
+                    <div class="nestedgrid2">
+
+                                <div class="nested2one">
+                                <img src="img/logochanged.png">
+                                </div>
+
+                                <div class="nested2two">
+                                <h2>...since 1990</h2>
+                                </div>
+                    </div>
                 </div>
+
+
 
                 <div class="three">
                     <h5>prices</h5>
